João, Isto é um simples commit para ver se está tudo a funcar. Podes fazer pull e verificar que em vez de nice dark mode diz gay dark mode xD?

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,7 @@
     <string name="pref_header_general">General</string>
 
     <string name="pref_title_dark_mode">Dark Mode</string>
-    <string name="pref_description_dark_mode">Enable the nice dark mode
-    </string>
+    <string name="pref_description_dark_mode">Enable the gay dark mode, test</string>
 
     <string name="pref_title_display_name">Display name</string>
     <string name="pref_default_display_name">John Smith</string>
