--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="pref_header_general">General</string>
 
     <string name="pref_title_dark_mode">Dark Mode</string>
-    <string name="pref_description_dark_mode">Enable the gay dark mode, test</string>
+    <string name="pref_description_dark_mode">Enable the nice dark mode</string>
 
     <string name="pref_title_display_name">Display name</string>
     <string name="pref_default_display_name">John Smith</string>
@@ -70,5 +70,12 @@
     <string name="pref_title_api_route">Api Route</string>
     <string name="pref_title_api_server">Api Server</string>
     <string name="pref_title_api_port">Api Port</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="low_connectivity_warning">Low connectivity warning</string>
+    <string name="actions_tab">Actions</string>
+    <string name="views_tab">Views</string>
+    <string name="gas_level">Gas level</string>
+    <string name="temperature">Temperature</string>
 
 </resources>
