--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,5 +77,7 @@
     <string name="views_tab">Views</string>
     <string name="gas_level">Gas level</string>
     <string name="temperature">Temperature</string>
+    <string name="alarm">Alarm</string>
+    <string name="water_pump">Water Pump</string>
 
 </resources>
