--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,10 @@
 
     <string-array name="multi_select_list_preference_default_value" />
 
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
     <string name="pref_title_system_sync_settings">System sync settings</string>
 
     <string name="pref_title_api_route">Api Route</string>
