Added last seen feature support for each device Corrected screen orientation incoherence's

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,5 +87,6 @@
 
     <string name="channel_name">RMSFChannel</string>
     <string name="channel_description">RMSF App warnings channel</string>
+    <string name="lastseen_indicator">LastSeen Indicator</string>
 
 </resources>
